Clarity Build: [NG] Fix tooltip visibility issue on trigger focus http://github.com/vmware/clarity/commit/f803d6b7cd39b5ff8f1be250ab53d4855b905c81:

--- a/clr-ui-dark.css
+++ b/clr-ui-dark.css
@@ -8501,6 +8501,9 @@ _:-ms-input-placeholder .progress-block > label,
 .tooltip clr-icon > svg {
   pointer-events: none; }
 
+.tooltip-trigger:focus + .tooltip-content {
+  visibility: visible; }
+
 .clr-form-control {
   margin-top: 1rem;
   display: -ms-flexbox;
